# backend_pomodoro_task

./: .dockerignore  .env.example  .env.production.example  .gitignore  .personal-skills.json  .personal-skills.local.json.example  AGENTS.md  Dockerfile  README.md  compose.yml  gunicorn_conf.py  manage.py  pyproject.toml  rebuild.sh  start_gunicorn.sh
apps/: __init__.py  apps.py
apps/pomodoro/: admin.py  apps.py  models.py  serializers.py  test_spec_back_007.py  test_spec_back_008.py  test_spec_back_009.py  test_steam_import.py  tests.py  urls.py  views.py
config/: health.py  middleware.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  database.py  legacy_sqlite.py  local.py  production.py  test.py
deploy/nginx/: backend_pomodoro_task.conf.example
docker/: entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
docs/handoff/: 01_handoff_bancodedados.md  02_handoff_analise_projeto.md
docs/handoffs/: 02_handoff_migracao_postgres_vps.md  03_handoff_spec_back_006.md
docs/postman/: backend_pomodoro_task.postman_collection.json  backend_pomodoro_task.postman_environment.json
docs/specs/: AJUSTE_CONTRATO_INICIO_CATEGORIA_DEFAULT.md  ATIVIDADE_ATIVA_PERSISTENTE_MULTIPLATAFORMA.md  CONTADOR_ASSINCRONO_FRONTEND.md  CONTRATO_TEMPORAL_ATIVIDADES.md  FILA_RANDOMIZACAO_ATIVIDADES.md  IMPORTACAO_ATIVIDADES_STEAM_ADMIN.md  MIGRACAO_POSTGRES.md  SPEC-BACK-006_CORRECAO_INICIO_EXECUCAO_TIMEZONE_POSTGRES.md  SPEC-BACK-007_FILAS_PERSISTENTES_POR_GRUPO.md  (+2 more)
tests/: test_database_config.py  test_health.py
user_profile/: admin.py  models.py  views.py
(+27 files in other folders)
